--- a/css/layout.css
+++ b/css/layout.css
@@ -6,5 +6,5 @@
     .container > .row {
         width:100%;
         margin-left: calc(50% - 500px);
-        background-color: yellow;
+        background-color: yellowgreen
     }
